Fixed overflowing login form

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -696,6 +696,10 @@ input.full-width {
 	}
 }
 
+.form-right {
+	display: flex;
+}
+
 .form-inline {
 	label {
 		display: block;
